# SuperShotGun

./: CMakeLists.txt  README.md  SuperShotGun.slnx
SuperShotGun/: Amender.cpp  Amender.h  File.cpp  Help.cpp  Help.h  SuperShotGun.rc  SuperShotGun.vcxproj  SuperShotGun.vcxproj.filters  main.cpp
src/: File.hpp  Help.cpp  main.cpp  resource.h
